parse/y.output

state 0
	$accept: .end $end 

	'('  shift 6
	NUM  shift 5
	.  error

	term  goto 3
	factor  goto 2
	expr  goto 4
	end  goto 1

state 1
	$accept:  end.$end 

	$end  accept
	.  error


state 2
	end:  factor.    (1)
	factor:  factor.'+' term 
	factor:  factor.'-' term 

	'+'  shift 7
	'-'  shift 8
	.  reduce 1 (src line 19)


state 3
	factor:  term.    (2)
	term:  term.'*' expr 
	term:  term.'/' expr 

	'*'  shift 9
	'/'  shift 10
	.  reduce 2 (src line 23)


state 4
	term:  expr.    (5)

	.  reduce 5 (src line 39)


state 5
	expr:  NUM.    (8)

	.  reduce 8 (src line 55)


state 6
	expr:  '('.factor ')' 

	'('  shift 6
	NUM  shift 5
	.  error

	term  goto 3
	factor  goto 11
	expr  goto 4

state 7
	factor:  factor '+'.term 

	'('  shift 6
	NUM  shift 5
	.  error

	term  goto 12
	expr  goto 4

state 8
	factor:  factor '-'.term 

	'('  shift 6
	NUM  shift 5
	.  error

	term  goto 13
	expr  goto 4

state 9
	term:  term '*'.expr 

	'('  shift 6
	NUM  shift 5
	.  error

	expr  goto 14

state 10
	term:  term '/'.expr 

	'('  shift 6
	NUM  shift 5
	.  error

	expr  goto 15

state 11
	factor:  factor.'+' term 
	factor:  factor.'-' term 
	expr:  '(' factor.')' 

	'+'  shift 7
	'-'  shift 8
	')'  shift 16
	.  error


state 12
	factor:  factor '+' term.    (3)
	term:  term.'*' expr 
	term:  term.'/' expr 

	'*'  shift 9
	'/'  shift 10
	.  reduce 3 (src line 24)


state 13
	factor:  factor '-' term.    (4)
	term:  term.'*' expr 
	term:  term.'/' expr 

	'*'  shift 9
	'/'  shift 10
	.  reduce 4 (src line 31)


state 14
	term:  term '*' expr.    (6)

	.  reduce 6 (src line 40)


state 15
	term:  term '/' expr.    (7)

	.  reduce 7 (src line 47)


state 16
	expr:  '(' factor ')'.    (9)

	.  reduce 9 (src line 60)


10 terminals, 5 nonterminals
10 grammar rules, 17/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 12/240000
14 extra closures
23 shift entries, 1 exceptions
9 goto entries
4 entries saved by goto default
Optimizer space used: output 18/240000
18 table entries, 0 zero
maximum spread: 10, maximum offset: 10
